jenkins-android-helper (0.0.6.20180205) UNRELEASED; urgency=medium

  * jenkins_android_emulator_helper: Add passing of CLI options to emulator start
  * jenkins_android_emulator_helper: Move property storing code to own function

 -- Michael Musenbrock <michael.musenbrock@gmail.com>  Mon, 05 Feb 2018 09:35:11 +0100

jenkins-android-helper (0.0.5.20180202) experimental; urgency=medium

  * jenkins_android_emulator_helper: force only ANDROID_AVD_HOME to
    be set to WORKSPACE instead of ANDROID_SDK_HOME

 -- Michael Musenbrock <michael.musenbrock@gmail.com>  Fri, 02 Feb 2018 14:23:07 +0100

jenkins-android-helper (0.0.4.20180125) experimental; urgency=medium

  * Fix detection of open ports per process
  * Add dependency to lsof

 -- Michael Musenbrock <michael.musenbrock@gmail.com>  Thu, 25 Jan 2018 15:57:58 +0100

jenkins-android-helper (0.0.3.20180125) experimental; urgency=medium

  * jenkins_android_cmd_wrapper: Use correct env variable to specifcy ANDROID_SERIAL

 -- Michael Musenbrock <michael.musenbrock@gmail.com>  Thu, 25 Jan 2018 10:05:12 +0100

jenkins-android-helper (0.0.2.20180125) experimental; urgency=medium

  * jenkins_android_emulator_helper: Make sure ANDROID_SDK_HOME is set to WORKSPACE

 -- Michael Musenbrock <michael.musenbrock@gmail.com>  Thu, 25 Jan 2018 10:05:12 +0100

jenkins-android-helper (0.0.1.20180119) experimental; urgency=medium

  * Change the jenkins_gradle_helper to an more generic jenkins_android_cmd_wrapper

 -- Michael Musenbrock <michael.musenbrock@gmail.com>  Fri, 19 Jan 2018 17:51:38 +0100

jenkins-android-helper (0.0.0.20180119) experimental; urgency=medium

  * Initial Release.

 -- Michael Musenbrock <michael.musenbrock@gmail.com>  Fri, 19 Jan 2018 15:23:20 +0100