@@ -19,10 +19,17 @@
 set -e
 set -x
 
+## ANDROID_SDK_ROOT needs to be set to the Android SDK
+
 _OPWD=`pwd`
 SCRIPT_DIR=$(cd `dirname $0`; pwd)
 
 LIBRARY_DIR=/usr/lib/jenkins-android-helper
+
+### assume that the script runs locally
+if [ -z "${WORKSPACE}" ]; then
+	WORKSPACE="${SCRIPT_DIR}"
+fi
 
 ###### source helper scripts ####
 source_library() {
@@ -37,25 +44,8 @@ source_library() {
 }
 
 source_library ini_helper_functions.sh
+source_library android_emulator_helper_functions.sh
 
-### assume that the script runs locally
-if [ -z "${WORKSPACE}" ]; then
-	WORKSPACE="${SCRIPT_DIR}"
-fi
-
-## ANDROID_SDK_ROOT needs to be set
-ANDROID_SDK_TOOLS_BIN_ADB="${ANDROID_SDK_ROOT}/platform-tools/adb"
-
-ANDROID_AVD_NAME="UNKNOWN"
-
-ANDROID_AVD_NAME_UNIQUE_STORE="${WORKSPACE}/last_unique_avd_name.tmp"
-ANDROID_EMULATOR_SERIAL="unknown"
-
-ANDROID_ADB_PORTS_RANGE_START=5554
-ANDROID_ADB_PORTS_RANGE_END=5584
-
-ANDROID_ADB_PORT_EVEN=""
-ANDROID_ADB_PORT_UNEVEN=""
 
 usage() {
 	cat <<EOOPTS
@@ -69,70 +59,12 @@ EOOPTS
 	exit 1
 }
 
-android_emulator_detect_used_adb_port_by_pid() {
-	local PID_TO_CHECK="${1}"
-	for pos_port in `seq ${ANDROID_ADB_PORTS_RANGE_START} 2 ${ANDROID_ADB_PORTS_RANGE_END}`; do
-		pos_port2=$((pos_port+1))
-
-		local TMP_NR_PORTS_USED=`lsof -sTCP:LISTEN -i4 -P -p ${PID_TO_CHECK} -a | tail -n +2 | sed 's/  */ /g' | cut -f9 -d" " | cut -f2 -d: | sort -u | grep -e ^${pos_port}$ -e ^${pos_port2}$ | wc -l`
-		if [ ${TMP_NR_PORTS_USED} -eq 2 ]; then
-			ANDROID_ADB_PORT_EVEN=${pos_port}
-			ANDROID_ADB_PORT_UNEVEN=${pos_port2}
-			break
-		fi
-	done
-}
-
-android_emulator_serial_via_port_from_used_avd_name_single_run() {
-	ANDROID_ADB_PORT_EVEN=""
-	ANDROID_ADB_PORT_UNEVEN=""
-
-	EMULATOR_PID=`pgrep -f "avd ${ANDROID_AVD_NAME}" || true`
-	if [ -n "${EMULATOR_PID}" ]; then
-		android_emulator_detect_used_adb_port_by_pid "${EMULATOR_PID}"
-
-		if [ -n "${ANDROID_ADB_PORT_EVEN}" ]; then
-			ANDROID_EMULATOR_PORT=${ANDROID_ADB_PORT_EVEN}
-			ANDROID_EMULATOR_SERIAL="emulator-${ANDROID_EMULATOR_PORT}"
-		fi
-	fi
-}
-
-android_emulator_serial_via_port_from_used_avd_name() {
-	RETRIES=10
-	for i in `seq 1 ${RETRIES}`; do
-		ANDROID_EMULATOR_PORT=""
-		android_emulator_serial_via_port_from_used_avd_name_single_run
-		if [ -n "${ANDROID_EMULATOR_PORT}" ]; then
-			break
-		fi
-		sleep 20
-	done
-}
-
-android_emulator_kill_emulator() {
-	if [ ! -x "${ANDROID_SDK_TOOLS_BIN_ADB}" ]; then
-		echo "adb binary [${ANDROID_SDK_TOOLS_BIN_ADB}] not found or not executable"
-		exit ${ERROR_CODE_ADB_BINARY_NOT_FOUND}
-	fi
-
-	${ANDROID_SDK_TOOLS_BIN_ADB} -s "${ANDROID_EMULATOR_SERIAL}" emu kill || true
-	sleep 5
-	kill ${EMULATOR_PID} || true
-	sleep 5
-	kill -9 ${EMULATOR_PID} || true
-}
-
 kill_emulator_on_failure() {
 	RET_VAL=$?
 	if [ ${RET_VAL} -ne 0 ]; then
 		android_emulator_kill_emulator
 	fi
 	exit ${RET_VAL}
-}
-
-read_unique_avd_name_from_store() {
-	ANDROID_AVD_NAME=`cat "${ANDROID_AVD_NAME_UNIQUE_STORE}"`
 }
 
 trap kill_emulator_on_failure EXIT
