@@ -2,8 +2,9 @@ jenkins-android-helper (0.0.6.20180205) UNRELEASED; urgency=medium
 
   * jenkins_android_emulator_helper: Add passing of CLI options to emulator start
   * jenkins_android_emulator_helper: Move property storing code to own function
+  * Move common code from emulator_helper and cmd_wrapper into android_emulator_helper_functions.sh
 
- -- Michael Musenbrock <michael.musenbrock@gmail.com>  Mon, 05 Feb 2018 09:35:11 +0100
+ -- Michael Musenbrock <michael.musenbrock@gmail.com>  Mon, 05 Feb 2018 10:21:11 +0100
 
 jenkins-android-helper (0.0.5.20180202) experimental; urgency=medium
 
